[gd_scene load_steps=2 format=3 uid="uid://compendium_ui"]

[ext_resource type="Script" path="res://scripts/ui/compendium_ui.gd" id="1_compendium"]

; Compendium — full-screen overlay showing all 118 elements as buttons.
; Press C to toggle. Discovered elements are colour-coded by category;
; undiscovered ones are dark grey.  Clicking an element shows details.

[node name="Compendium" type="Control"]
script = ExtResource("1_compendium")
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
z_index = 50

; Semi-transparent dark background
[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.08, 0.92)

; Title label
[node name="Title" type="Label" parent="."]
layout_mode = 1
offset_left = 16.0
offset_top = 8.0
offset_right = 400.0
offset_bottom = 32.0
text = "COMPENDIUM  —  Periodic Table of Elements"
theme_override_font_sizes/font_size = 13

; Close hint
[node name="CloseHint" type="Label" parent="."]
layout_mode = 1
offset_right = -16.0
offset_top = 8.0
offset_bottom = 28.0
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
text = "C  to close"
theme_override_font_sizes/font_size = 10
horizontal_alignment = 2

; Scrollable container for the element grid
[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
offset_left = 8.0
offset_top = 36.0
offset_right = 820.0
offset_bottom = -8.0
anchor_bottom = 1.0
grow_vertical = 2

; 18-column grid (matches the standard periodic table layout)
[node name="ElementGrid" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2
columns = 18
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2

; Detail panel on the right side
[node name="DetailPanel" type="PanelContainer" parent="."]
layout_mode = 1
offset_left = 828.0
offset_top = 36.0
offset_right = -8.0
offset_bottom = -8.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="DetailPanel"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Symbol" type="Label" parent="DetailPanel/VBox"]
layout_mode = 2
text = "—"
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1

[node name="Name" type="Label" parent="DetailPanel/VBox"]
layout_mode = 2
text = "Select an element"
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1
autowrap_mode = 3

[node name="Mass" type="Label" parent="DetailPanel/VBox"]
layout_mode = 2
text = ""
theme_override_font_sizes/font_size = 11

[node name="Category" type="Label" parent="DetailPanel/VBox"]
layout_mode = 2
text = ""
theme_override_font_sizes/font_size = 11

[node name="Biome" type="Label" parent="DetailPanel/VBox"]
layout_mode = 2
text = ""
theme_override_font_sizes/font_size = 11

[node name="HSeparator" type="HSeparator" parent="DetailPanel/VBox"]
layout_mode = 2

[node name="FunFact" type="Label" parent="DetailPanel/VBox"]
layout_mode = 2
text = ""
theme_override_font_sizes/font_size = 10
autowrap_mode = 3
custom_minimum_size = Vector2(0, 60)
